Fix wrapping of conference name

--- a/admin/styles/sidebar.less
+++ b/admin/styles/sidebar.less
@@ -14,11 +14,10 @@
 }
 
 .sidebar__conference {
-    border-bottom: 1px solid white;
     color: #fff;
-    display: inline-block;
     font-weight: 700;
     margin: 20px 0 5px 0;
+    text-decoration: underline;
 }
 
 .sidebar__clients {
